
Tue Jun 4 13:08:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: fixed RemoveAt() implementation.

2002-05-27  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs (LastIndexOf): Return -1 if searching for null, also
	fix check of parameters sent to make sure we don't search beyond the
	beginning of the list.
	(ListWrapper): Throw exception if called with null.
	We now pass all unit tests.

2002-05-23  Duncan Mak  <duncan@ximian.com>

	* ArrayList.cs (Wrapper): Preliminary implementation of
	ArrayList.Wrapper (IList).

2002-05-22  Martin Baulig  <martin@gnome.org>

	* ArrayList.cs: Made count, capacity and dataArray the first three
	fields in the class.  They're read by the reflection library.

2002-05-21  Lawrence Pit  <loz@cable.a2000.nl>

	* ArrayList.cs: Fixed bug where a capacity of 0 could be reached, 
	thereby causing problems when trying to add elements.

2002-05-06  Duncan Mak  <duncan@ximian.com>

	* Queue.cs (TrimToSize): Implemented.
	
2002-05-05  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs: Throw RankException when constructing from a 
	multi-dimensional array. Confirmed behavior from MS.NET

Thu May 2 15:18:11 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ArrayList.cs: make mcs compile again: it's allowed to
	call arraylist.CopyTo(array, 0) when the length of the array
	is also 0.

Wed May 1 17:05:40 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* SortedList.cs: fix RemoveAt () to use the correct length in
	Array.Copy.

2002-05-01  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs (Add & AddRange) : Throw exceptions where needed.

2002/05/01  Nick Drochak <ndrochak@gol.com>

	* ArrayList.cs (CopyTo) : Check parameters and throw exceptions
	where needed.

2002/04/30  Nick Drochak <ndrochak@gol.com>

	* ArrayList.cs (Clear) : Throw exception if ReadOnly or FixedSize.
		(InsertRange) : Implement.
		(SetRange) : Implement.

2002-04-30  Nick Drochak  <ndrochak@gol.com>

	* ArrayList.cs (TrimToSize) : Implement.
